# workspace

./: .gitignore  Makefile  README.md  _CoqProject  coq.flags  dune  dune-project  dune-workspace  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/actions/checkout_workspace/: action.yml
.github/actions/config/: action.yml
.github/actions/initialize_workspace/: action.yml
.github/actions/prepare_workspace/: action.yml
.github/workflows/: ci.yml  ci.yml.template  filter.yml  main.yml
bluerock/: .gitignore  README.md  build.mk  config.mk  rules.mk
build-list/: build-list.py
dev/: activate.sh  rules.mk
dev/build-list/: build-list.py
dev/check_ver/: README.md  clang.sh  driver.inc.sh  opam.sh  rust.sh  uv.sh
dev/ci/: checkout.sh  checkout_command.sh  gen.py  repo-deps.toml  update_template.sh  update_template_command.sh
dev/dune-named-logfile/: dune  dune-named-logfile  dune-project
dev/dune-tools/dune-named-logfile/: dune  dune-named-logfile  dune-named-logfile.opam  dune-project
dev/dune-tools/dune-report/: README.md  dune-project  dune-report.opam
dev/dune-tools/dune-report/lib/: dune  dune_log.ml  dune_log.mli
dev/dune-tools/filter-dune-output/: README.md  dune  dune-project  filter-dune-output.opam
dev/opam-deps/: skylabs-deps.opam
dev/repos/: config.mk  rules.mk
dev/setup/: opam.sh  uv.sh
dev/worktrees/: README-worktree.md  add.sh  git-worktree.sh  remove.sh
dev/worktrees/helpers/: repo-add.sh  repo-remove.sh
docker/: .gitignore  Dockerfile  Dockerfile-fmdeps  build-latest-fmdeps.sh  build-latest.sh  rules.mk
fmdeps/: .gitignore  config.mk  rules.mk
psi/: .gitignore  config.mk  rules.mk
