(subdir dyn
 (dynamic_include ../dev/build-list/dune.inc))

(subdir dev/build-list
 (rule
  (target dune.inc)
  (deps (:yml (glob_files *.yml)) (:script build-list.py))
  (action
   (system "uv run --with pyyaml --with sexpdata --python 3.11 --quiet %{script} -o %{target} %{yml} --relative-to='../../dyn' --root=../.."))))
