opam-version: "2.0"
synopsis: "External deps for the SkyLabs AI toolchain"
maintainer: [
  "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
  "Jan-Oliver Kaiser <janno@skylabs-ai.io>"
]
authors: [
  "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
  "Jan-Oliver Kaiser <janno@skylabs-ai.io>"
]
license: "LGPL-2.1-only"
homepage: "https://github.com/SkylabsAI/fm-ci"
bug-reports: "https://github.com/SkylabsAI/fm-ci/issues"
depends: [
  "angstrom" {= "0.16.1"}
  "astring" {= "0.8.5"}
  "atd" {= "2.16.0"}
  "atdgen" {= "2.16.0"}
  "atdgen-runtime" {= "2.16.0"}
  "atdts" {= "2.16.0"}
  "base" {= "v0.17.3"}
  "base_bigstring" {= "v0.17.0"}
  "base_quickcheck" {= "v0.17.1"}
  "bheap" {= "2.0.0"}
  "bigstringaf" {= "0.10.0"}
  "bin_prot" {= "v0.17.0-1"}
  "biniou" {= "1.2.2"}
  "bos" {= "0.2.1"}
  "camlp-streams" {= "5.0.1"}
  "camlzip" {= "1.13"}
  "capitalization" {= "v0.17.0"}
  "chrome-trace" {= "3.20.2"}
  "cmdliner" {= "2.0.0"}
  "conf-gmp" {= "5"}
  "conf-libffi" {= "2.0.0"}
  "conf-linux-libc-dev" {= "0" & os = "linux"}
  "conf-pkg-config" {= "4"}
  "conf-zlib" {= "1"}
  "core" {= "v0.17.1"}
  "core_kernel" {= "v0.17.0"}
  "core_unix" {= "v0.17.1"}
  "cppo" {= "1.8.0"}
  "crunch" {= "4.0.0"}
  "csexp" {= "1.5.2"}
  "ctypes" {= "0.24.0"}
  "ctypes-foreign" {= "0.24.0"}
  "dot-merlin-reader" {= "5.6-504"}
  "dune" {= "3.20.2"}
  "dune-build-info" {= "3.20.2"}
  "dune-configurator" {= "3.20.2"}
  "dune-rpc" {= "3.20.2"}
  "dyn" {= "3.20.2"}
  "easy-format" {= "1.3.4"}
  "either" {= "1.0.0"}
  "expect_test_helpers_core" {= "v0.17.0"}
  "fiber" {= "3.7.0"}
  "fieldslib" {= "v0.17.0"}
  "fileutils" {= "0.6.6"}
  "fix" {= "20250919"}
  "fmt" {= "0.11.0"}
  "fpath" {= "0.7.3"}
  "gel" {= "v0.17.0"}
  "gen" {= "1.1"}
  "ISO8601" {= "0.2.6"}
  "int_repr" {= "v0.17.0"}
  "integers" {= "0.7.0"}
  "jane-street-headers" {= "v0.17.0"}
  "js_of_ocaml" {= "6.2.0"}
  "js_of_ocaml-compiler" {= "6.2.0"}
  "js_of_ocaml-ppx" {= "6.2.0"}
  "jsonrpc" {= "1.24.0"}
  "jst-config" {= "v0.17.0"}
  "logs" {= "0.10.0"}
  "lsp" {= "1.24.0"}
  "lwt" {= "5.9.2"}
  "memprof-limits" {= "0.3.0"}
  "memtrace" {= "0.2.3"}
  "menhir" {= "20250912"}
  "menhirCST" {= "20250912"}
  "menhirLib" {= "20250912"}
  "menhirSdk" {= "20250912"}
  "merlin" {= "5.6-504"}
  "merlin-lib" {= "5.6-504"}
  "mtime" {= "2.1.0"}
  "num" {= "1.6"}
  "ocaml" {= "5.4.0"}
  "ocaml-compiler" {= "5.4.0"}
  "ocaml-compiler-libs" {= "v0.17.0"}
  "ocaml-config" {= "3"}
  "ocaml-index" {= "5.6-504"}
  "ocaml-lsp-server" {= "1.24.0"}
  "ocaml-option-flambda" {= "1"}
  "ocaml-option-fp" {= "1" & (os = "linux" | os = "macos") & arch = "x86_64"}
  "ocaml-syntax-shims" {= "1.0.0"}
  "ocaml-variants" {= "5.4.0+options"}
  "ocaml-version" {= "4.0.3"}
  "ocaml_intrinsics_kernel" {= "v0.17.1"}
  "ocamlbuild" {= "0.16.1"}
  "ocamlc-loc" {= "3.20.2"}
  "ocamlfind" {= "1.9.8"}
  "ocamlformat" {= "0.28.1"}
  "ocamlformat-lib" {= "0.28.1"}
  "ocamlformat-rpc-lib" {= "0.28.1"}
  "ocp-indent" {= "1.9.0"}
  "ocplib-endian" {= "1.2"}
  "octavius" {= "1.2.2"}
  "odoc" {= "3.1.0"}
  "odoc-parser" {= "3.1.0"}
  "ordering" {= "3.20.2"}
  "parsexp" {= "v0.17.0"}
  "patdiff" {= "v0.17.0"}
  "patience_diff" {= "v0.17.0"}
  "pp" {= "2.0.0"}
  "ppx_assert" {= "v0.17.0"}
  "ppx_base" {= "v0.17.0"}
  "ppx_bench" {= "v0.17.1"}
  "ppx_bin_prot" {= "v0.17.1"}
  "ppx_cold" {= "v0.17.0"}
  "ppx_compare" {= "v0.17.0"}
  "ppx_custom_printf" {= "v0.17.0"}
  "ppx_derivers" {= "1.2.1"}
  "ppx_deriving" {= "6.1.1"}
  "ppx_deriving_yojson" {= "3.10.0"}
  "ppx_diff" {= "v0.17.1"}
  "ppx_disable_unused_warnings" {= "v0.17.0"}
  "ppx_enumerate" {= "v0.17.0"}
  "ppx_expect" {= "v0.17.3"}
  "ppx_fields_conv" {= "v0.17.0"}
  "ppx_fixed_literal" {= "v0.17.0"}
  "ppx_globalize" {= "v0.17.2"}
  "ppx_hash" {= "v0.17.0"}
  "ppx_here" {= "v0.17.0"}
  "ppx_ignore_instrumentation" {= "v0.17.0"}
  "ppx_import" {= "1.12.0"}
  "ppx_inline_test" {= "v0.17.1"}
  "ppx_jane" {= "v0.17.0"}
  "ppx_js_style" {= "v0.17.1"}
  "ppx_let" {= "v0.17.1"}
  "ppx_log" {= "v0.17.0"}
  "ppx_module_timer" {= "v0.17.0"}
  "ppx_optcomp" {= "v0.17.1"}
  "ppx_optional" {= "v0.17.0"}
  "ppx_pipebang" {= "v0.17.0"}
  "ppx_sexp_conv" {= "v0.17.1"}
  "ppx_sexp_message" {= "v0.17.0"}
  "ppx_sexp_value" {= "v0.17.0"}
  "ppx_stable" {= "v0.17.1"}
  "ppx_stable_witness" {= "v0.17.0"}
  "ppx_string" {= "v0.17.0"}
  "ppx_string_conv" {= "v0.17.0"}
  "ppx_tydi" {= "v0.17.1"}
  "ppx_typerep_conv" {= "v0.17.1"}
  "ppx_variants_conv" {= "v0.17.1"}
  "ppx_yojson_conv" {= "v0.17.1"}
  "ppx_yojson_conv_lib" {= "v0.17.0"}
  "ppxlib" {= "0.37.0"}
  "ppxlib_jane" {= "v0.17.4"}
  "ptime" {= "1.2.0"}
  "ptmap" {= "2.0.5"}
  "ptset" {= "1.0.1"}
  "re" {= "1.14.0"}
  "rresult" {= "0.7.0"}
  "sedlex" {= "3.7"}
  "sel" {= "0.7.0"}
  "sexp_pretty" {= "v0.17.0"}
  "sexplib" {= "v0.17.0"}
  "sexplib0" {= "v0.17.0"}
  "spawn" {= "v0.17.0"}
  "splittable_random" {= "v0.17.0"}
  "stdio" {= "v0.17.0"}
  "stdlib-shims" {= "0.3.0"}
  "stdune" {= "3.20.2"}
  "stringext" {= "1.6.0"}
  "time_now" {= "v0.17.0"}
  "timezone" {= "v0.17.0"}
  "toml" {= "7.1.0"}
  "topkg" {= "1.1.1"}
  "typerep" {= "v0.17.1"}
  "tyxml" {= "4.6.0"}
  "uopt" {= "v0.17.0"}
  "uri" {= "4.4.0"}
  "uucp" {= "17.0.0"}
  "uuseg" {= "17.0.0"}
  "uutf" {= "1.0.4"}
  "variantslib" {= "v0.17.0"}
  "xdg" {= "3.20.2"}
  "yaml" {= "3.2.0"}
  "yojson" {= "2.2.2"}
  "zarith" {= "1.14"}
  "zarith_stubs_js" {= "v0.17.0"}
]
build: []
